move out properties

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,25 @@
 [metadata]
-description-file = README.md
+name = pypair
+version = 3.0.8
+author = Jee Vang
+author_email = vangjee@gmail.com
+description = Pairwise association measures of statistical variable types
+long_description: file: README.md
+long_description_content_type = text/markdown
+description_file = README.md
+url = https://github.com/oneoffcoder/py-pair
+keywords = statistics, pairwise, association, correlation, concordance, measurement, strength, pyspark
+install_requires = scipy, numpy, pandas, scikit-learn, pyspark
+classifiers =
+    Programming Language :: Python :: 3
+    License :: OSI Approved :: Apache Software License
+    Operating System :: OS Independent
+    Topic :: Scientific/Engineering :: Artificial Intelligence
+    Intended Audience :: Developers
+    Intended Audience :: Science/Research
+    Development Status :: 5 - Production/Stable
+include_package_data = True
+test_suite = nose.collector
 
 [flake8]
 max-line-length = 120
